Change navbar heading from 'Raj' to 'Shiva'

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Navbar -->
     <nav>
-        <h2>Raj</h2>
+        <h2>Shiva</h2>
         <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
