Change hero title from Raj to Shiva

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Hero -->
     <section class="hero">
-        <h1>Hi, I'm Raj</h1>
+        <h1>Hi, I'm Shiva</h1>
         <p>Developer focused on building clean and reliable web solutions</p>
         <a href="#projects" class="btn">View Projects</a>
     </section>
